--- a/src/main/resources/templates/inpro_edit.html
+++ b/src/main/resources/templates/inpro_edit.html
@@ -33,7 +33,7 @@
                         </div>
                         <div class="form-group">
                             <label class="lbl">Editor:<input class="form-control" type="text" th:field="*{editor}" name="editor" placeholder="Name of the editor" /></label>
-                            <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
+                            <a th:if="${#fields.hasErrors('editor')}" th:errors="*{editor}">editor errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Volume:<input class="form-control" type="number" th:field="*{volume}" name="volume" placeholder="1" /></label>
@@ -67,7 +67,7 @@
                             <label class="lbl">Note:<input class="form-control" type="text" th:field="*{note}" name="note" placeholder="Additional notes" /></label>
                             <a th:if="${#fields.hasErrors('note')}" th:errors="*{note}">note errors</a>
                             <div class="form-group">
-                                <button class="btn btn-primary btn-block" type="submit">Add</button>
+                                <button class="btn btn-primary btn-block" type="submit">Edit</button>
                             </div>
                         </div>
                     </form>
