--- a/src/main/resources/templates/book_edit.html
+++ b/src/main/resources/templates/book_edit.html
@@ -9,7 +9,7 @@
                 <div class="form-container">
                     <div class="image-holder"></div>
                     <form method="post" th:object="${book}">
-                        <h2 class="text-center"><strong>Edit</strong> book.</h2>
+                        <h2 class="text-center"><strong>Edit</strong>a book.</h2>
 
                         <div class="form-group">
                             <label class="lbl">Title: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{title}" name="title" placeholder="Operating Systems: Internal Design and Principles" /></label>
