--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,31 +11,31 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="box">
                                 <h3 class="name">Articles</h3>
-                                <img src="../img/meeting.jpg" alt="Arto"/>
-                                <p class="description">Create and manage article references</p>
-                                <a th:href="@{/article/add}" class="learn-more" name='createArticle'>Create »</a>
-                                <br/>
-                                <a th:href="@{/articles}" class="learn-more" name='listArticle'>List »</a>
+                                <a th:href="@{/articles}">
+                                    <img src="../img/meeting.jpg" alt="Arto"/>
+                                </a>
+                                <p class="description">Create article references</p>
+                                <a th:href="@{/article/add}" class="btn btn-success" name='createArticle'>Create »</a>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 item">
                             <div class="box">
                                 <h3 class="name">Books</h3>
-                                <img src="../img/meeting.jpg" alt="Arto"/>
-                                <p class="description">Create and manage book references</p>
-                                <a th:href="@{/book/add}" class="learn-more" name='createBook'>Create »</a>
-                                <br/>
-                                <a th:href="@{/books}" class="learn-more" name='listBook'>List »</a>
+                                <a th:href="@{/books}">
+                                    <img src="../img/meeting.jpg" alt="Arto"/>
+                                </a>
+                                <p class="description">Create book references</p>
+                                <a th:href="@{/book/add}" class="btn btn-success" name='createBook'>Create »</a>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 item">
                             <div class="box">
                                 <h3 class="name">Inproceedings</h3>
-                                <img src="../img/meeting.jpg" alt="Arto"/>
-                                <p class="description">Create and manage inproceeding references</p>
-                                <a th:href="@{/inpro/add}" class="learn-more" name='createInproceeding'>Create »</a>
-                                <br/>
-                                <a th:href="@{/inpros}" class="learn-more" name='listInproceeding'>List »</a>
+                                <a th:href="@{/inpros}">
+                                    <img src="../img/meeting.jpg" alt="Arto"/>
+                                </a>
+                                <p class="description">Create inproceeding references</p>
+                                <a th:href="@{/inpro/add}" class="btn btn-success" name='createInproceeding'>Create »</a>
                             </div>
                         </div>
                     </div>
