--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,10 @@
         <div>
             <nav class="navbar navbar-default navigation-clean">
                 <div class="container">
-                    <div class="navbar-left"><a th:href="@{/}" name="frontpage"><img src="/img/pepe.jpg" id="pepe" width="75" height="60" alt="pepe"/></a>
+                    <div class="navbar-left">
+                        <a th:href="@{/}" name="frontpage">
+                            <img src="/img/BibFrog.jpg" id="pepe" width="175" height="40" alt="pepe"/>
+                        </a>
                         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span><span class="icon-bar"></span>
